--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.screen.home.login.WebViewActivity">
+    tools:context=".ui.screen.login.WebViewActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
